[workspace]
members = [
    "contracts/agent-nft",
    "contracts/agent-token",
    "contracts/execution-hub",
    "contracts/marketplace",
    "contracts/evolution",
    "contracts/oracle",
    "contracts/faucet",
    "lib",
]

resolver = "2"

[profile.release]
codegen-units = 1
opt-level = 'z'
lto = true
debug = false
strip = "symbols"
overflow-checks = true

[profile.release-with-logs]
inherits = "release"
debug = true
strip = "none"

[workspace.dependencies]
soroban-sdk = "20.5.0"
