[package]
name = "stellai_lib"
version = "0.1.0"
description = "Shared library for StellAIverse contracts"
authors = ["StellAIverse Team"]
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
soroban-sdk = "21.0.0"

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }
