[package]
name = "evolution"
version = "0.1.0"
description = "Evolution manager contract for StellAIverse"
authors = ["StellAIverse Team"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "20.0.1"
stellai_lib = { path = "../../lib" }

[dev-dependencies]
soroban-sdk = { version = "20.0.1", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]